align fixes

--- a/src/styles/blocks/container.scss
+++ b/src/styles/blocks/container.scss
@@ -5,12 +5,12 @@
   padding: 0 20px;
 
   @include onTablet {
-    max-width: 744px;
+    max-width: 600px;
     padding: 0 72px;
   }
 
   @include onDesktop {
-    max-width: 1260px;
+    max-width: 1024px;
     padding: 0 120px;
   }
 }
